tests/ui/impl-trait/in-bindings/escaping-bound-var.stderr
error: cannot capture late-bound lifetime in `impl Trait` in binding
  --> $DIR/escaping-bound-var.rs:12:52
   |
LL |     let x: &dyn for<'a> Foo<'a, Out = impl Sized + 'a> = &();
   |                     -- lifetime defined here       ^^

error: aborting due to 1 previous error

